# sem2

./: .gitignore
task1/: CMakeLists.txt  input.txt  main.cpp
task2/: CMakeLists.txt  main.cpp
task3/: CMakeLists.txt  main.cpp
task4/: CMakeLists.txt  main.cpp
task4/inc/: Circle.hpp  Game.hpp  Line.hpp  Rectangle.hpp  Triangle.hpp
task5/: main.cpp
task5/inc/: Circle.hpp  Game.hpp
task6/: CMakeLists.txt  main.cpp
task6/inc/: Circle.hpp  Game.hpp  Ship.hpp
task6/src/: Circle.cpp  Game.cpp
